Switch to Artifact Registry (#29)
* config.mk: use AR docker image

* build.yaml: use AR for images

* Gitignore artifacts

* fetch-image.sh: gcloud auth for AR

* image-fetcher dockerfile: base on AR

* image fetcher make file: use AR

* build-batch-worker-image-startup.sh: add gcloud auth configure-docker for AR, user AR for images

* batch worker: ue AR for public_gcr_images

* Worker dockerfile: use AR

* ci build.py: add gcloud auth configure-docker for AR, use AR base image

* Makefiles: use AR docker images

* stat-permissions.sh: fix for macOS gnu-grep

* third-party dockers: use AR

* ci dockerFile create_namespace: use AR image

* Docker hail-ubuntu: use AR image

* ci build.py: add region into the jinja render config for Dockerfiles

* CI deploy config: add region

* Python-dill: use AR image

* Auth deployment.yaml: add REGION

* Use hail-dvc default ci image pointer

* Add Artifact Registry in main.tf

* Add AR in dev-docs

* Add AR for ukbb-rg

* Add AR in more makefiles

* Fix AR usage for image-fetcher

* Specify "region" in the "hail-ubuntu-stmp" target.

* Fix zone assignment in startup script.

* Allow ci to read from Artifact Registry.

* Makefiles: parametrise `DOCKER_ROOT_IMAGE` to support both GCR and AR

* Parametrise `DOCKER_PREFIX` to support both GCR and AR

* Un-gitignore "vlad"

* Fix

* batch: pass DOCKER_PREFIX to worker

* DOCKER_PREFIX in build-batch-worker-image-startup.sh

* build.yaml: add ubuntu tags back

* ci/ci/build.py: parametrise docker prefix

* infra README: configure-docker AR

Co-authored-by: Leonhard Gruenschloss <leonhard.gruenschloss@populationgenomics.org.au>

--- a/docker/hail-ubuntu/Dockerfile
+++ b/docker/hail-ubuntu/Dockerfile
@@ -1,4 +1,4 @@
-FROM gcr.io/{{ global.project }}/ubuntu:focal-20201106
+FROM {{ global.docker_prefix }}/ubuntu:focal-20201106
 ENV LANG C.UTF-8
 COPY hail-apt-get-install /bin/hail-apt-get-install
 # We need software-properties-common for add-apt-repository; however, that
