--- a/ci/deployment.yaml
+++ b/ci/deployment.yaml
@@ -52,6 +52,8 @@ spec:
              value: "{{ global.project }}"
            - name: HAIL_GCP_ZONE
              value: "{{ global.zone }}"
+           - name: HAIL_DOCKER_PREFIX
+             value: "{{ global.docker_prefix }}"
            - name: HAIL_CI_UTILS_IMAGE
              value: "{{ ci_utils_image.image }}"
            - name: HAIL_IP
