--- a/build.yaml
+++ b/build.yaml
@@ -1958,6 +1958,12 @@ steps:
       script: /io/sql/add-enable-standing-worker.py
     - name: add-inst-colls
       script: /io/sql/add-inst-colls.sql
+    - name: add-creating-job-state
+      script: /io/sql/add-creating-job-state.sql
+    - name: add-job-private-inst-coll
+      script: /io/sql/add-job-private-inst-coll.sql
+    - name: insert-nonpreemptible-resources
+      script: /io/sql/insert_nonpreemptible_resources.py
    inputs:
     - from: /repo/batch/sql
       to: /io/
