Add initial version endpoint for deploy

--- a/docker/Dockerfile.service-base
+++ b/docker/Dockerfile.service-base
@@ -7,6 +7,7 @@ RUN hail-pip-install -r service-base-requirements.txt
 
 COPY hail/python/setup-hailtop.py /hailtop/setup.py
 COPY hail/python/hailtop /hailtop/hailtop/
+RUN make -C hail python-version-info
 RUN hail-pip-install /hailtop && rm -rf /hailtop
 
 COPY gear/setup.py /gear/setup.py
