--- a/query/deployment.yaml
+++ b/query/deployment.yaml
@@ -9,7 +9,7 @@ spec:
   selector:
     matchLabels:
       app: query
-  replicas: 1
+  replicas: 3
   template:
     metadata:
       labels:
@@ -64,9 +64,6 @@ spec:
             requests:
               memory: "3.75G"
               cpu: "800m"
-            limits:
-              memory: "3.75G"
-              cpu: "1"
           readinessProbe:
             tcpSocket:
               port: 5000
@@ -83,3 +80,30 @@ spec:
          secret:
            optional: false
            secretName: ssl-config-query
+---
+apiVersion: autoscaling/v2beta1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: query
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: query
+  minReplicas: 3
+  maxReplicas: 32
+  metrics:
+   - type: Resource
+     resource:
+       name: cpu
+       targetAverageUtilization: 80
+---
+apiVersion: policy/v1beta1
+kind: PodDisruptionBudget
+metadata:
+  name: query
+spec:
+  minAvailable: 2
+  selector:
+    matchLabels:
+      app: query
