--- a/build.yaml
+++ b/build.yaml
@@ -760,8 +760,8 @@ steps:
      cd repo
      {{ code.checkout_script }}
      gcloud -q auth activate-service-account --key-file=/test-gsa-key/key.json
-     gsutil -m cp -r hail/src/test/resources/* gs://7-day/{{ token }}/test/resources/
-     gsutil -m cp -r hail/python/hail/docs/data/* gs://7-day/{{ token }}/doctest/data/
+     gsutil -m cp -r hail/src/test/resources/* gs://hail-test-dmk9z/{{ token }}/test/resources/
+     gsutil -m cp -r hail/python/hail/docs/data/* gs://hail-test-dmk9z/{{ token }}/doctest/data/
    secrets:
     - name: test-gsa-key
       namespace:
@@ -783,7 +783,7 @@ steps:
      mkdir -p src/test
      tar xzf splits.tar.gz
      export HAIL_TEST_SKIP_R=1
-     export HAIL_GS_FS_TEST_RESOURCES=gs://7-day/{{ token }}/test/resources/fs
+     export HAIL_GS_FS_TEST_RESOURCES=gs://hail-test-dmk9z/{{ token }}/test/resources/fs
      java -cp hail-test.jar:$SPARK_HOME/jars/* org.testng.TestNG -listener is.hail.LogTestListener testng-splits-0.xml
    inputs:
     - from: /hail-debug-test.jar
@@ -816,7 +816,7 @@ steps:
      mkdir -p src/test
      tar xzf splits.tar.gz
      export HAIL_TEST_SKIP_R=1
-     export HAIL_GS_FS_TEST_RESOURCES=gs://7-day/{{ token }}/test/resources/fs
+     export HAIL_GS_FS_TEST_RESOURCES=gs://hail-test-dmk9z/{{ token }}/test/resources/fs
      java -cp hail-test.jar:$SPARK_HOME/jars/* org.testng.TestNG -listener is.hail.LogTestListener testng-splits-1.xml
    inputs:
     - from: /hail-debug-test.jar
@@ -849,7 +849,7 @@ steps:
      mkdir -p src/test
      tar xzf splits.tar.gz
      export HAIL_TEST_SKIP_R=1
-     export HAIL_GS_FS_TEST_RESOURCES=gs://7-day/{{ token }}/test/resources/fs
+     export HAIL_GS_FS_TEST_RESOURCES=gs://hail-test-dmk9z/{{ token }}/test/resources/fs
      java -cp hail-test.jar:$SPARK_HOME/jars/* org.testng.TestNG -listener is.hail.LogTestListener testng-splits-2.xml
    inputs:
     - from: /hail-debug-test.jar
@@ -882,7 +882,7 @@ steps:
      mkdir -p src/test
      tar xzf splits.tar.gz
      export HAIL_TEST_SKIP_R=1
-     export HAIL_GS_FS_TEST_RESOURCES=gs://7-day/{{ token }}/test/resources/fs
+     export HAIL_GS_FS_TEST_RESOURCES=gs://hail-test-dmk9z/{{ token }}/test/resources/fs
      java -cp hail-test.jar:$SPARK_HOME/jars/* org.testng.TestNG -listener is.hail.LogTestListener testng-splits-3.xml
    inputs:
     - from: /hail-debug-test.jar
@@ -915,7 +915,7 @@ steps:
      mkdir -p src/test
      tar xzf splits.tar.gz
      export HAIL_TEST_SKIP_R=1
-     export HAIL_GS_FS_TEST_RESOURCES=gs://7-day/{{ token }}/test/resources/fs
+     export HAIL_GS_FS_TEST_RESOURCES=gs://hail-test-dmk9z/{{ token }}/test/resources/fs
      java -cp hail-test.jar:$SPARK_HOME/jars/* org.testng.TestNG -listener is.hail.LogTestListener testng-splits-4.xml
    inputs:
     - from: /hail-debug-test.jar
@@ -2194,8 +2194,8 @@ steps:
      tar xzf test.tar.gz
      tar xvf wheel-container.tar
      python3 -m pip install --no-dependencies hail-*-py3-none-any.whl
-     export HAIL_TEST_RESOURCES_DIR=gs://7-day/{{ token }}/test/resources
-     export HAIL_DOCTEST_DATA_DIR=gs://7-day/{{ token }}/doctest/data
+     export HAIL_TEST_RESOURCES_DIR=gs://hail-test-dmk9z/{{ token }}/test/resources
+     export HAIL_DOCTEST_DATA_DIR=gs://hail-test-dmk9z/{{ token }}/doctest/data
      export HAIL_QUERY_BACKEND=service
      python3 -n 64 -m pytest --ignore=test/hailtop/ --log-cli-level=INFO -s -vv --instafail --durations=50 test
    inputs:
