[all] fix many incorrect uses of sed -i
If you do not include an empty argument to `sed` `-i`, it will use *whatever* the next argument is as the
file extension. As such, we have lots of `html-e` files in the docs. This fixes it by properly providing
an empty extension to `-i`.

--- a/docker/hail/Dockerfile
+++ b/docker/hail/Dockerfile
@@ -26,7 +26,7 @@ RUN export SPARK_HOME=$(find_spark_home.py) && \
          >$SPARK_HOME/jars/gcs-connector-hadoop2-2.0.1.jar && \
     mkdir -p $SPARK_HOME/conf && \
     touch $SPARK_HOME/conf/spark-defaults.conf && \
-    sed -i $SPARK_HOME/conf/spark-defaults.conf \
+    sed -i '' $SPARK_HOME/conf/spark-defaults.conf \
         -e 's:spark\.hadoop\.google\.cloud\.auth\.service\.account\.enable.*:spark.hadoop.google.cloud.auth.service.account.enable true:' \
         -e 's:spark\.hadoop\.google\.cloud\.auth\.service\.account\.json\.keyfile.*:spark\.hadoop\.google\.cloud\.auth\.service\.account\.json\.keyfile /gsa-key/key.json:'
 # source: https://cloud.google.com/storage/docs/gsutil_install#linux
