--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -35,6 +35,7 @@ prometheus_async==19.2.0
 prometheus_client==0.7.1
 pyjwt==1.7.1
 pylint==2.6.0
+astroid<2.5  # https://github.com/PyCQA/pylint/issues/4131
 PyMySQL==0.9.2
 pytest==4.6.3
 pytest-asyncio==0.10.0
