Fix version tag (no longer exact same as for hailctl :()

--- a/.github/workflows/condarise.yaml
+++ b/.github/workflows/condarise.yaml
@@ -19,6 +19,7 @@ jobs:
         run: |
           make -C hail python-version-info
           VERSION=$(cat hail/python/hail/hail_version)
+          VERSION=${VERSION/-/.dev}
           cat conda/hail/meta-template.yaml \
           | sed s/{version}/${VERSION}/ > conda/hail/meta.yaml
 
