Add terminationGracePeriodSeconds to query deployment

--- a/query/deployment.yaml
+++ b/query/deployment.yaml
@@ -16,6 +16,7 @@ spec:
         app: query
         hail.is/sha: "{{ code.sha }}"
     spec:
+      terminationGracePeriodSeconds: 28800  # 8 hours
       serviceAccountName: query
 {% if deploy %}
       priorityClassName: production
