[prometheus] add prometheus to track SLIs

--- a/build.yaml
+++ b/build.yaml
@@ -1683,6 +1683,54 @@ steps:
     - deploy_router
     - create_certs
  - kind: runImage
+   name: render_prom_nginx_conf
+   image:
+     valueFrom: service_base_image.image
+   script: |
+     set -ex
+     cd /io
+     rm -rf repo
+     mkdir repo
+     cd repo
+     {{ code.checkout_script }}
+     cd prometheus
+     {% if deploy %}
+     DEPLOY=true
+     {% else %}
+     DEPLOY=false
+     {% endif %}
+     python3 ../ci/jinja2_render.py '{"deploy": '${DEPLOY}', "default_ns": {"name": "{{ default_ns.name }}"}}' nginx.conf nginx.conf.out
+   outputs:
+     - from: /io/repo/prometheus/nginx.conf.out
+       to: /nginx.conf.out
+   dependsOn:
+     - default_ns
+     - service_base_image
+ - kind: buildImage
+   name: prom_nginx_image
+   dockerFile: prometheus/Dockerfile.nginx
+   contextPath: prometheus
+   publishAs: prometheus
+   inputs:
+     - from: /nginx.conf.out
+       to: /nginx.conf.out
+   dependsOn:
+     - hail_ubuntu_image
+     - render_prom_nginx_conf
+ - kind: deploy
+   name: deploy_prometheus
+   namespace:
+     valueFrom: default_ns.name
+   config: prometheus/prometheus.yaml
+   scopes:
+    - deploy
+    - dev
+   dependsOn:
+    - default_ns
+    - prom_nginx_image
+    - deploy_router
+    - create_certs
+ - kind: runImage
    name: create_dummy_oauth2_client_secret
    image:
      valueFrom: base_image.image
