--- a/ci/deployment.yaml
+++ b/ci/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         app: ci
         hail.is/sha: "{{ code.sha }}"
+        grafanak8sapp: "true"
     spec:
 {% if deploy %}
       priorityClassName: production
