--- a/query/deployment.yaml
+++ b/query/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       priorityClassName: production
 {% endif %}
       containers:
-        - name: query
+        - name: query-python
           image: "{{ query_image.image }}"
           command:
 {% if not deploy %}
@@ -60,10 +60,12 @@ spec:
            - name: ssl-config
              mountPath: /ssl-config
              readOnly: true
+           - name: unix-domain-socket
+             mountPath: /sock
           resources:
             requests:
-              cpu: "600m"
-              memory: "2G"
+              cpu: "300m"
+              memory: "1G"
             limits:
               cpu: "1"
               memory: "2.5G"
@@ -72,7 +74,59 @@ spec:
               port: 5000
             initialDelaySeconds: 5
             periodSeconds: 5
+        - name: query-scala
+          image: "{{ query_image.image }}"
+          command:
+{% if not deploy %}
+           - /controller.sh
+{% endif %}
+           - java
+           - -cp
+           - /hail.jar:/log4j.properties:/usr/local/lib/python3.7/dist-packages/pyspark/jars/*
+           - is.hail.backend.service.ServiceBackendMain
+           - /sock/sock
+          env:
+           - name: HAIL_DOMAIN
+             value: "{{ global.domain }}"
+           - name: HAIL_DEPLOY_CONFIG_FILE
+             value: /deploy-config/deploy-config.json
+           - name: HAIL_DEFAULT_NAMESPACE
+             value: "{{ default_ns.name }}"
+           - name: HAIL_SHA
+             value: "{{ code.sha }}"
+           - name: HAIL_QUERY_WORKER_IMAGE
+             value: {{ query_image.image }}
+{% if deploy %}
+           - name: HAIL_QUERY_BUCKET
+             value: hail-query
+{% else %}
+           - name: HAIL_QUERY_BUCKET
+             value: hail-test-dmk9z
+{% endif %}
+          ports:
+           - containerPort: 5000
+          volumeMounts:
+           - name: deploy-config
+             mountPath: /deploy-config
+             readOnly: true
+           - name: session-secret-key
+             mountPath: /session-secret-key
+             readOnly: true
+           - name: ssl-config
+             mountPath: /ssl-config
+             readOnly: true
+           - name: unix-domain-socket
+             mountPath: /sock
+          resources:
+            requests:
+              cpu: "300m"
+              memory: "1G"
+            limits:
+              cpu: "1"
+              memory: "2.5G"
       volumes:
+       - name: unix-domain-socket
+         emptyDir: {}
        - name: deploy-config
          secret:
            secretName: deploy-config
