--- a/batch/Dockerfile.worker
+++ b/batch/Dockerfile.worker
@@ -45,3 +45,4 @@ COPY batch/batch /batch/batch/
 RUN hail-pip-install --no-deps /batch && rm -rf /batch
 
 COPY batch/hail.jar /
+COPY query/log4j.properties /
