--- a/query/log4j.properties
+++ b/query/log4j.properties
@@ -1,8 +1,4 @@
-# Root logger option
 log4j.rootLogger=INFO, AlwaysOnConsoleAppender
-
-# Direct log messages to stdout
-log4j.logger.is.hail.backend.service=INFO, AlwaysOnConsoleAppender
+# log4j.logger.is.hail.backend.service=INFO, AlwaysOnConsoleAppender
 log4j.appender.AlwaysOnConsoleAppender=org.apache.log4j.ConsoleAppender
-log4j.appender.AlwaysOnConsoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.AlwaysOnConsoleAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %c{1}: %p: %m%n
+log4j.appender.AlwaysOnConsoleAppender.layout=is.hail.services.JSONLogLayout
