[query] Hardcode benchmark project

--- a/benchmark/Makefile
+++ b/benchmark/Makefile
@@ -28,6 +28,7 @@ cleanup_image:
 	rm -f image_sha
 	rm -f pushed_image
 
+PROJECT := hail-vdc
 BENCHMARK_DOCKER_TAG := benchmark_$(shell whoami)
 BENCHMARK_REPO_BASE = gcr.io/$(PROJECT)/$(BENCHMARK_DOCKER_TAG)
 
