--- a/build.yaml
+++ b/build.yaml
@@ -3539,6 +3539,7 @@ steps:
       namespace:
         valueFrom: default_ns.name
       mountPath: /ssl-config
+   timeout: 1200
    dependsOn:
     - default_ns
     - create_certs
