Use DOCKER_ROOT_IMAGE to pass to batch worker image

--- a/ci/deployment.yaml
+++ b/ci/deployment.yaml
@@ -54,6 +54,8 @@ spec:
              value: "{{ global.zone }}"
            - name: HAIL_DOCKER_PREFIX
              value: "{{ global.docker_prefix }}"
+           - name: HAIL_DOCKER_ROOT_IMAGE
+             value: "{{ global.docker_root_image }}"
            - name: HAIL_CI_UTILS_IMAGE
              value: "{{ ci_utils_image.image }}"
            - name: HAIL_IP
