--- a/query/Dockerfile
+++ b/query/Dockerfile
@@ -1,4 +1,4 @@
-FROM {{ service_base_image.image }}
+FROM {{ service_java_run_base_image.image }}
 
 COPY query/log4j.properties /
 COPY query/hail.jar /
