[batch] remove restrictions on PR and dev batch pools
The query service needs a lot of computation to test itself. This lets us scale up to
128 full-sized cores. The query tests can keep that saturated for a while.

--- a/build.yaml
+++ b/build.yaml
@@ -1984,6 +1984,8 @@ steps:
       script: /io/sql/insert_nonpreemptible_resources.py
     - name: fix-schedule-job
       script: /io/sql/fix-schedule-job.sql
+    - name: increase-test-and-dev-pool-sizes
+      script: /io/sql/increase-test-and-dev-pool-sizes.py
    inputs:
     - from: /repo/batch/sql
       to: /io/
