--- a/bootstrap-gateway/deployment.yaml
+++ b/bootstrap-gateway/deployment.yaml
@@ -37,8 +37,11 @@ spec:
          image: "{{ gateway_image.image }}"
          resources:
            requests:
-             memory: "250M"
              cpu: "100m"
+             memory: "200M"
+           limits:
+             cpu: "1"
+             memory: "1G"
          ports:
           - containerPort: 80
           - containerPort: 443
