Revert "[tls] async create_certs (#9738)"
This reverts commit 542fccfce09624641303fe1e78491b293773049b.

--- a/tls/config.yaml
+++ b/tls/config.yaml
@@ -71,6 +71,9 @@ principals:
 - name: shuffler
   domain: shuffler
   kind: json
+- name: image-fetcher
+  domain: image-fetcher
+  kind: curl
 - name: benchmark
   domain: benchmark
   kind: json
