Better cURL flags. (#76)

--- a/.github/workflows/condarise.yaml
+++ b/.github/workflows/condarise.yaml
@@ -46,9 +46,8 @@ jobs:
         # Only run this step once.
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
-          curl --fail \
-            -X POST \
+          curl --fail --silent --show-error -X POST \
             -H "Authorization: token ${{ secrets.ANALYSIS_SERVER_GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/populationgenomics/analysis-runner/actions/workflows/6364059/dispatches \
-            -d "{\"ref\": \"main\", \"inputs\": {\"hail_version\": \"${{ env.version }}\"}}"
+            -d '{"ref": "main", "inputs": {"hail_version": "${{ env.version }}"}}'
